add float align file

--- a/07_float_align.html
+++ b/07_float_align.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>float & Align</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: Arial, Helvetica, sans-serif;
       line-height: 1.4em;
@@ -27,6 +31,18 @@
       /* text align property */
       text-align: justify;
     }
+
+    #box-2 {
+      float: left;
+      width: 68%;
+    }
+
+    #box-3 {
+      float: right;
+      width: 30%;
+    }
+
+    
   </style>
 </head>
 <body>
@@ -40,6 +56,10 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perspiciatis praesentium, voluptate provident ab veniam debitis quisquam repellendus libero ipsum.</p>
     </div>
     <div id="box-3" class="box">
+      <h3>Heading</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perspiciatis praesentium, voluptate provident ab veniam debitis quisquam repellendus libero ipsum.</p>
+    </div>
+    <div id="box-4" class="box">
       <h3>Heading</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perspiciatis praesentium, voluptate provident ab veniam debitis quisquam repellendus libero ipsum.</p>
     </div>
