update float align course

--- a/07_float_align.html
+++ b/07_float_align.html
@@ -20,6 +20,10 @@
       max-width: 960px;
     }
 
+    .clr {
+      clear: both;
+    }
+
     .box {
       background: #f4f4f4;
       border: 1px solid #333;
@@ -42,7 +46,7 @@
       width: 30%;
     }
 
-    
+
   </style>
 </head>
 <body>
@@ -59,6 +63,7 @@
       <h3>Heading</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perspiciatis praesentium, voluptate provident ab veniam debitis quisquam repellendus libero ipsum.</p>
     </div>
+    <div class="clr"></div>
     <div id="box-4" class="box">
       <h3>Heading</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perspiciatis praesentium, voluptate provident ab veniam debitis quisquam repellendus libero ipsum.</p>
