--- a/12_form_styling.html
+++ b/12_form_styling.html
@@ -25,8 +25,9 @@
           -Background color is #344a72
         */
         background: #344a72;
-        font-family: Raleway;
-        
+        font-family: 'Raleway', sans-serif;
+        line-height: 1.8;
+        color: white;
       }
 
       a {
@@ -43,8 +44,9 @@
         -May want to add some padding
         */
         margin: 30px auto;
-        max-width: 30%;
-        padding: 10px 20px;
+        /* max-width: 30%; */
+        max-width: 400px;
+        padding: 20px;
       }
 
       .form-wrap {
@@ -52,6 +54,8 @@
           This is the white area around the form and heading, etc
         */
         background: white;
+        padding: 15px 25px; 
+        color: #333333;
       }
 
       .form-wrap h1,
@@ -60,15 +64,16 @@
           May want to center these
         */
         text-align: center;
-        margin-bottom: 20px;
+        /* margin-bottom: 20px; */
       }
 
       .form-wrap .form-group {
         /* 
           Each label, input is wrapped in .form-group
         */
-        width: 90%;
-        margin: 10px auto;
+        /* width: 90%; */
+        /* margin: 10px auto; */
+        margin-top: 15px;
       }
 
       .form-wrap .form-group label {
@@ -76,15 +81,18 @@
           Label should be turned into a block element
         */
         display: block;
-        padding-bottom: 5px;
+        color: #666666;
+        /* padding-bottom: 5px; */
       }
 
       .form-wrap .form-group input {
         /* 
           Inputs should reach accross the .form-wrap 100% and have some padding
         */
-        padding: 5px 10px;
+        padding: 10px;
         width: 100%;
+        border: #dddddd 1px solid;
+        border-radius: 5px;
       }
 
       .form-wrap button {
@@ -93,12 +101,14 @@
           Background color for button is #49c1a2
         */
         display: block;
-        width: 90%;
+        width: 100%;
         background: #49c1a2;
-        margin: 10px auto;
-        font-size: 16px;
-        border-radius: 5px;
         padding: 10px;
+        margin-top: 20px;
+        color: white;
+        /* font-size: 16px; */
+        border-radius: 5px;
+        cursor: pointer;
       }
 
       .form-wrap button:hover {
@@ -106,17 +116,17 @@
           Hover background color for button is #37a08e
         */
         background-color: #37a08e;
-        cursor: pointer;
       }
 
       .form-wrap .bottom-text {
         /* 
           Bottom text is smaller
         */
-        font-size: 12px;
-        width: 90%;
+        font-size: 13px;
+        margin-top: 20px;
+        /* width: 90%;
         padding: 10px;
-        margin: auto;
+        margin: auto; */
       }
 
       footer {
