update form styling file

--- a/12_form_styling.html
+++ b/12_form_styling.html
@@ -134,10 +134,7 @@
         Should be centered
        */
        text-align: center;
-       font-size: 12px;
-       padding: 10px;
-       margin: 10px auto;
-       color: #ffffff;
+       margin-top: 10px;
       }
 
       footer a {
