--- a/13_media_queries.html
+++ b/13_media_queries.html
@@ -17,6 +17,8 @@
         h1 {
             display: none;
         }
+
+        /* Different device display settings */
         /* smartphones */
         @media(max-width: 500px) {
             body {
