--- a/14_em_rem.html
+++ b/14_em_rem.html
@@ -5,13 +5,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Em & Rem Units</title>
+  <style>
+    /* #box-1 {
+      font-size: 20px;
+    }
+
+    #box-1 p {
+      font-size: 1.5em;
+      padding: 1em;
+    }
+
+    #box-1 ul {
+      font-size: 1.2em;
+    } */
+
+    html {
+      font-size: 62.5%;
+    }
+
+    #box-2 h3 {
+      font-size: 2.3rem;
+    }
+
+    #box-2 p {
+      font-size: 1.6rem;
+      line-height: 1.7rem;
+    }
+
+  </style>
 </head>
 <body>
-  <div class="box-1">
+  <!-- <div id="box-1">
     <h3>Box One</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit laboriosam magnam provident rem laborum non itaque consequuntur consequatur autem beatae ullam dolorum, delectus dolorem quos praesentium deserunt impedit facilis ipsa?</p>
-  </div>
-  <div class="box-2">
+    <ul>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+        <ul>
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+        </ul>
+      <li>4</li>
+    </ul>
+  </div> -->
+  <div id="box-2">
     <h3>Box Two</h3>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit laboriosam magnam provident rem laborum non itaque consequuntur consequatur autem beatae ullam dolorum, delectus dolorem quos praesentium deserunt impedit facilis ipsa?</p>
   </div>
